fix navbar toggle position on small screens, fix machine type selection position on small screens

--- a/frontend/app/components/navigation/navigation.component.css
+++ b/frontend/app/components/navigation/navigation.component.css
@@ -23,4 +23,10 @@
     .right-stretch {
         margin-right: -15px;
     }
+
+    .navbar-toggler {
+        position: absolute;
+        right: 20px;
+        top: 10px;
+    }
 }
